reform code